# sask

./: .gitignore  .pymarkdown  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
analysis/: Analysis_README.md  deploy-port-plan.md  deployment-architecture.md  open-questions.md  porting-plan.md
ansible/: ansible.cfg  bootstrap.yml  inventory.yml  site.yml
config/: asset_catalog_data.toml  asset_catalog_template.toml  body_data.toml  body_template.toml  calendar_lore_template.toml  calendars.toml  cofullness_data.toml  ephemeris_data.toml  fatunik_solar.toml  hearth.toml  house_data.toml  lore_time.toml  observation_data.toml  seasons.toml  star_data.toml  terpin_lunar.toml  terpin_solar.toml  timeline.toml  untamed.toml  warren.toml
decisions/: 0001-secrets-policy.toml  0002-service-framework-and-conventions.toml  0003-tofu-state-management.toml  0004-deployment-topology.toml  0005-service-deployment.toml  0006-application-secrets-deployment.toml  _schema.toml
docs/: console_log.txt  deploy-runbook.md  dev-setup.md  devlog.md  glossary.md  references.md  user_testing.md  vm-setup.md
infra/: .gitignore  main.tf  outputs.tf  ssh-config.tf  terraform.tfvars.example  variables.tf
prs/: 0001-scaffolding.toml  0002-local-resource-service.toml  0003-droplet-provisioning.toml  0004-service-deployment.toml  _schema.toml
requirements/: _schema.toml  functional.toml  operational.toml
resources/: manifest.toml
scripts/: acceptance-test.sh  connect.sh  deploy.sh  destroy.sh  dev-shell.sh  devlog-entry.sh  export-requirements.sh  provision.sh  (+3 more)
(+346 files in other folders)
