[tool.poetry]
name = "sask"
version = "0.1.0"
description = "Small authenticated resource server experiment"
authors = ["Dave"]
packages = [{include = "sask", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0"
gunicorn = "^23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = ">=0.9.0"

[tool.poetry.group.acceptance]
optional = true

[tool.poetry.group.acceptance.dependencies]
pytest = "^8.0"
requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "D", "B", "C4"]

[tool.ruff.lint.pydocstyle]
convention = "google"
